# Signal-processor

./: .gitignore  CMakeLists.txt  Raport.ipynb
headers/: dft.h  generic.h  noise.h  plot.h  signal.h  threshold.h
raport/: Raport.ipynb
source/: dft.cpp  generic.cpp  main.cpp  noise.cpp  plot.cpp  signal.cpp  signal_processor.cpp  threshold.cpp
